# ai-form-filler

./: CLAUDE.md  Dockerfile  docker-compose.yml  flask-api.py  google form html example.html  langchain-rag-pipeline.py  main.py  pyproject.toml  rag_pipeline.py  readme.md  requirements.txt
chroma_db/: chroma.sqlite3
docker/: docker-compose.txt  dockerfile.txt
extension/: background.js  content.js  manifest.json  popup.html  popup.js
ollama/: id_ed25519  id_ed25519.pub
