[project]
name = "ai-form-filler"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "chromadb>=0.4.18",
    "flask==2.3.3",
    "flask-cors==4.0.0",
    "langchain>=0.1.0",
    "langchain-community>=0.0.13",
    "langchain-ollama>=0.3.0",
    "openpyxl>=3.1.2",
    "pandas>=2.2.0",
    "pypdf2>=3.0.1",
    "python-docx>=1.0.1",
    "python-pptx>=0.6.21",
    "sentence-transformers>=2.2.2",
    "torch>=2.3.0",
    "transformers>=4.35.0",
    "unstructured>=0.10.30",
    "werkzeug==2.3.7",
]
